refactor: split validation & crud methods

--- a/src/tasks.json
+++ b/src/tasks.json
@@ -1,27 +1,23 @@
 [
    {
       "id": 1,
-      "title": "titulo 1 teste update",
-      "description": "teste descricao update"
+      "title": "updatedTitle",
+      "description": "updatedDescription",
+      "createdAt": 1735332928266,
+      "updatedAt": 1735335182025
    },
    {
-      "id": 2,
-      "title": "task Title2",
-      "description": "Task Description2"
+      "id": 3,
+      "title": "updatedTitle",
+      "description": "updatedDescription",
+      "createdAt": 1735333466583,
+      "updatedAt": 1735335278831
    },
    {
       "id": 4,
-      "title": "teste",
-      "description": "description"
-   },
-   {
-      "id": 6,
-      "title": "teste",
-      "description": "description"
-   },
-   {
-      "id": 7,
-      "title": "titlef",
-      "description": "sdsd"
+      "title": "title",
+      "description": "description",
+      "createdAt": 1735333470828,
+      "updatedAt": 1735333470828
    }
 ]
